--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -39,11 +39,12 @@
                 android:id="@+id/aedCategoryButton"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/button_height"
+                android:layout_marginHorizontal="5dp"
                 android:background="@drawable/map_category_button"
-                android:drawableStart="@drawable/map_aed_symbol"
+                android:drawableStart="@drawable/map_aed_symbol_fixed"
                 android:paddingHorizontal="14dp"
                 android:paddingVertical="@dimen/button_vertical_padding"
-                android:text="@string/aed"
+                android:text=" 심장충격기"
                 android:textColor="@drawable/map_button_text_color" />
 
             <android.widget.Button
@@ -55,7 +56,7 @@
                 android:drawableStart="@drawable/map_shelter_symbol"
                 android:paddingHorizontal="14dp"
                 android:paddingVertical="@dimen/button_vertical_padding"
-                android:text="@string/shelter" />
+                android:text=" 대피소" />
 
             <android.widget.Button
                 android:id="@+id/emergencyRoomCategoryButton"
@@ -66,7 +67,7 @@
                 android:drawableStart="@drawable/map_emergency_room_symbol"
                 android:paddingHorizontal="14dp"
                 android:paddingVertical="@dimen/button_vertical_padding"
-                android:text="@string/emergency"
+                android:text=" 응급실"
                 android:textColor="@drawable/map_button_text_color" />
 
             <android.widget.Button
@@ -86,7 +87,7 @@
     <TextView
         android:id="@+id/aedNumber"
         android:layout_width="0dp"
-        android:layout_height="42dp"
+        android:layout_height="30dp"
         android:layout_marginStart="24dp"
         android:paddingTop="12dp"
         android:textColor="@color/black"
