--- a/app/src/main/res/layout/fragment_checklist_mine.xml
+++ b/app/src/main/res/layout/fragment_checklist_mine.xml
@@ -9,11 +9,11 @@
         android:id="@+id/ch_mine_default"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="visible" >
         <TextView
             android:id="@+id/checklistTVphrase1"
