--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="button_height">37dp</dimen>
     <dimen name="button_vertical_padding">4dp</dimen>
+    <dimen name="map_download">56dp</dimen>
+    <dimen name="category_button_margin">4dp</dimen>
 
     <!--
 Refer to App Widget Documentation for margin information
