--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,23 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".info.InfoFragment">
-
-<!--    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/myToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        android:textAlignment="center"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/top_app_bar" />-->
-
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,7 +55,7 @@
                 android:id="@+id/ib_how_to_aed"
                 android:layout_width="173dp"
                 android:layout_height="220dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:contentDescription="@string/how_to_aed"
                 android:src="@drawable/info_ib_howtoaed"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -78,8 +66,8 @@
                 android:id="@+id/ib_how_to_cpr"
                 android:layout_width="173dp"
                 android:layout_height="220dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="8dp"
                 android:contentDescription="@string/how_to_cpr"
                 android:src="@drawable/info_ib_howtocpr"
                 app:layout_constraintLeft_toRightOf="@id/ib_how_to_aed"
@@ -92,7 +80,7 @@
                 android:layout_height="220dp"
                 android:contentDescription="@string/how_to_disaster"
                 android:src="@drawable/info_ib_disaster"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/ib_how_to_checklist"
                 app:layout_constraintTop_toBottomOf="@id/ib_how_to_aed" />
@@ -101,8 +89,8 @@
                 android:id="@+id/ib_how_to_checklist"
                 android:layout_width="173dp"
                 android:layout_height="220dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
                 android:contentDescription="@string/how_to_cpr"
                 android:src="@drawable/info_ib_checklist"
                 app:layout_constraintLeft_toRightOf="@id/ib_how_to_disaster"
@@ -110,6 +98,8 @@
                 app:layout_constraintTop_toBottomOf="@id/ib_how_to_cpr" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
