--- a/app/src/main/res/layout/activity_aed.xml
+++ b/app/src/main/res/layout/activity_aed.xml
@@ -13,6 +13,7 @@
         app:titleEnabled="true"
         android:gravity="center"
         android:padding="0dp"
+        app:titleTextAppearance="@style/Body1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
