--- a/app/src/main/res/layout/activity_disaster.xml
+++ b/app/src/main/res/layout/activity_disaster.xml
@@ -9,13 +9,14 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/disaster_appbar"
         android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
         android:textAlignment="center"
         app:titleCentered="true"
         app:titleEnabled="true"
         android:gravity="center"
         android:padding="0dp"
+        app:titleTextAppearance="@style/Body1"
         tools:text = "재난상황 대처 방법"
-        android:layout_height="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
