--- a/app/src/main/res/layout/activity_earthquake.xml
+++ b/app/src/main/res/layout/activity_earthquake.xml
@@ -14,6 +14,7 @@
         app:titleEnabled="true"
         android:gravity="center"
         android:padding="0dp"
+        app:titleTextAppearance="@style/Body1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
     <ImageView
