--- a/app/src/main/res/layout/activity_urban_fire.xml
+++ b/app/src/main/res/layout/activity_urban_fire.xml
@@ -15,6 +15,7 @@
         app:titleEnabled="true"
         android:gravity="center"
         android:padding="0dp"
+        app:titleTextAppearance="@style/Body1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
