--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,36 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-<!--    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar_main" />
 
-    <Space
-        android:id="@+id/space"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/toolbar" />-->
-
-    <com.google.android.material.appbar.MaterialToolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@color/white"
         android:minHeight="?attr/actionBarSize"
-        android:textAlignment="center"
-        app:titleEnabled="true"
-        app:titleCentered="true"
-        android:padding="0dp"
-        app:titleTextAppearance="@style/Body1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/top_app_bar">
 
-    </com.google.android.material.appbar.MaterialToolbar>
+        <TextView
+            android:id="@+id/toolbar_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:textAppearance="@style/Head3"
+            android:layout_gravity="center" />
+
+    </androidx.appcompat.widget.Toolbar>
 
 
 
