--- a/app/src/main/res/layout/activity_setting_favorite.xml
+++ b/app/src/main/res/layout/activity_setting_favorite.xml
@@ -76,4 +76,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/noItemTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_favorite"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="즐겨찾기 해놓은 아이템이 없습니다"
+        android:textColor="@color/gray400"
+        android:textSize="16sp"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
