--- a/app/src/main/res/layout/activity_typhoon.xml
+++ b/app/src/main/res/layout/activity_typhoon.xml
@@ -16,7 +16,15 @@
         app:titleTextAppearance="@style/Body1"
         tools:text = "재난상황 대처 방법"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent">
+<!--        <ImageButton
+            android:id="@+id/back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_back"
+            android:contentDescription="@string/back"/>-->
+    </com.google.android.material.appbar.MaterialToolbar>
     <ImageView
         android:id="@+id/iv_bar_design"
         android:contentDescription="@string/info_iv_bar_design"
