--- a/app/src/main/res/layout/activity_urban_fire.xml
+++ b/app/src/main/res/layout/activity_urban_fire.xml
@@ -17,7 +17,15 @@
         android:padding="0dp"
         app:titleTextAppearance="@style/Body1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+<!--        <ImageButton
+            android:id="@+id/back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_back"
+            android:contentDescription="@string/back"/>-->
+    </com.google.android.material.appbar.MaterialToolbar>
 
     <ImageView
         android:id="@+id/iv_bar_design"
