--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -95,6 +95,10 @@
                 app:layout_constraintLeft_toRightOf="@id/ib_how_to_disaster"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ib_how_to_cpr" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="136dp"
+                app:layout_constraintTop_toBottomOf="@id/ib_how_to_checklist"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
